[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.40.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
langchain = "^0.3.10"
pypdf = "^5.1.0"
langchain-anthropic = "^0.3.0"
langchain-community = "^0.3.10"
tiktoken = "^0.8.0"
cryptography = "^44.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
